@startuml
'https://plantuml.com/sequence-diagram

hide methods

class Administrator


class ClinicalTest {
    -labWereCreated
    -internalCode
    -nhsCode
}


class DateTime {
    -date
    -time
}

class Company {
    -description
}

class Parameter {
    -shortName
    -code
    -description
}

Administrator"1" -- "*"Company : > works
Administrator"1"--"*"NHSReport : > makes
Administrator"1"--"*"DateTime : > selects
DateTime"1"--"*"NHSReport : > of
NHSReport"1"--"*"Parameter: > is for Covid
Parameter"1"--"*"ClinicalTest : > of
@enduml